--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step1_LogInForm/Step1_LogInForm.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step1_LogInForm/Step1_LogInForm.scss
@@ -1,6 +1,5 @@
 /**
-
- * Log In Form Sass
+ * Step1_LogInForm Sass
  *
  * Ghostery Browser Extension
  * https://www.ghostery.com/
@@ -12,7 +11,6 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0
  */
 
-// Log In Form
 .Step1_LogInForm {
 	margin-top: 40px;
 }
