--- a/app/hub/Views/PlanView/PlanView.scss
+++ b/app/hub/Views/PlanView/PlanView.scss
@@ -92,12 +92,41 @@
 	text-decoration: underline;
 	cursor: pointer;
 }
-
 .PlanView__plansContainer {
 	margin-top: 100px;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
+}
+.PlanView__orCardContainer {
+	display: flex;
+	@include breakpoint($large down) {
+		flex-direction: column;
+		height: 50px;
+	}
+}
+.PlanView__or {
+	display: flex;
+	align-items: center;
+	padding: 0 66px;
+	height: 670px;
+	font-size: 24px;
+	color: #4a4a4a;
+}
+.PlanView__cardButtonContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.PlanView__cardCTAButton {
+}
+.PlanView__ctaButtonContainer {
+	display: flex;
+	justify-content: center;
+}
+.PlanView__KeepOrUpgradeContainer {
+	display: flex;
+	justify-content: space-around;
 }
 
 .PlanView__arrowDown {
