Add padding and change CTA button strings

--- a/app/hub/Views/PlanView/PlanView.scss
+++ b/app/hub/Views/PlanView/PlanView.scss
@@ -118,9 +118,8 @@
 	display: flex;
 	justify-content: center;
 }
-.PlanView__KeepOrUpgradeContainer {
-	display: flex;
-	justify-content: space-around;
+.PlanView__keepOrUpgradeContainer {
+	margin: 40px auto;
 }
 
 .PlanView__arrowDown {
