--- a/app/hub/Views/PlanView/PlanView.scss
+++ b/app/hub/Views/PlanView/PlanView.scss
@@ -56,7 +56,7 @@
 .PlanView__searchCTAButton {
 	display: flex;
 	justify-content: center;
-	margin: auto;
+	margin: 48px auto 0 auto;
 	height: 44px;
 	width: 162px;
 	padding: 7.7px 14px;
@@ -70,10 +70,6 @@
 	background-position: 100% 50%;
 	transition: 0.25s all;
 	border: none;
-	&:hover {
-		background-position: 0% 50%;
-		transition: 0.25s all;
-	}
 	color: #FFF;
 	font-size: 14.1px;
 	font-weight: 700;
@@ -81,8 +77,43 @@
 	text-align: center;
 	line-height: 2.05;
 	cursor: pointer;
-}
 
+	&:hover {
+		background-position: 0% 50%;
+		transition: 0.25s all;
+	}
+}
+.PlanView__premiumCTAButton {
+	display: flex;
+	justify-content: center;
+	margin: 48px auto 0 auto;
+	height: 44px;
+	width: 162px;
+	padding: 7.7px 14px;
+	line-height: 22px;
+	background: linear-gradient(
+			45deg,
+ 			#6c097a 50%,
+ 			#03a9ec
+	);
+	background-size: 200% 100%;
+	background-position: 100% 50%;
+	transition: 0.25s all;
+	border: none;
+	color: #FFF;
+	font-size: 14.1px;
+	font-weight: 700;
+	border-radius: 3.5px;
+	text-align: center;
+	line-height: 2.05;
+	cursor: pointer;
+
+	&:hover {
+		color: $white;
+		background-position: 0% 50%;
+		transition: 0.25s all;
+	}
+}
 .PlanView__seeAllPlans {
 	margin-top: 48px;
 	display: flex;
