--- a/app/hub/Views/StepProgressBar/StepProgressBar.scss
+++ b/app/hub/Views/StepProgressBar/StepProgressBar.scss
@@ -15,7 +15,6 @@
 	display: flex;
 	justify-content: space-around;
 }
-
 .StepProgressBar__Step {
 	height: 34px;
 	width: 32px;
@@ -59,4 +58,14 @@
 		background: url('/app/images/hub/step-progress-bar/step-completed.svg');
 		background-repeat: no-repeat;
 	}
+}
+.StepProgressBar__column {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.StepProgressBar__label {
+	margin-bottom: 14px;
+	font-size: 12px;
+	color: $tundora;
 }
