GH-2210: Onboarding - Step 4 - Choose Plan (#640)
* Create ghostery-search promo in plan view

* Add scroll arrow and cards

* Add value prop list to cards

* Add radio button and hover effects to cards

* Add click handler to full card, not only radio button

* Select default plan depending on current plan

* Add logic to display title and subtitle texts

* Style radio button alt design

* Touch up radio button alt design

* Make responsive

* Change CTA button to a button

* Add back backgrounds on small screens and add checkmarks for free card

* Add working links

* Refactor basic/plus/premium states

* Make cards responsive with OR

* Add padding and change CTA button strings

* Add hover effects to search and premium CTA buttons

* Conditionally show cards based on users subscriptions and refactor arrow to show/hide plan cards instead of scrolling

* Fix logic for showing caret

* Fix and refactor cta button links

* Fix color of premium CTA button when displaying to a basic user

* Refactor and add comments

* Remove unused css

* Update plus and premium checkout links to specify english

* Move RadioButton and RadioButtonGroup to shared components

* Rename Step4_ChoosePlanView to ChoosePlanView

* Use BASIC, PLUS, and PREMIUM constants from UpgradePlanViewConstants and fix search.svg path

* Update copywrite year

* Replace hex color codes with variables

* Add border to unchecked radio button

Co-authored-by: Ilya Zarembsky <ilya.zarembsky@gmail.com>

--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -86,6 +86,9 @@ html, body, #root {
 @import '../hub/Views/LogInView/LogInView.scss';
 @import '../hub/Views/CreateAccountView/CreateAccountView.scss';
 @import '../hub/Views/UpgradePlanView/UpgradePlanView.scss';
+@import '../ghostery-browser-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss';
+@import '../ghostery-browser-hub/Views/OnboardingViews/ChoosePlanView/ChoosePlanView.scss';
+@import '../ghostery-browser-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss';
 
 // Imports from ../shared-components directory
 @import '../shared-components/ExitButton/ExitButton.scss';
@@ -96,3 +99,4 @@ html, body, #root {
 @import '../shared-components/ToggleCheckbox/ToggleCheckbox.scss';
 @import '../shared-components/ToggleSwitch/ToggleSwitch.scss';
 @import '../shared-components/ForgotPassword/ForgotPassword.scss';
+@import './partials/radio_button';
