Assorted intro hub fixes

--- a/app/scss/partials/_colors.scss
+++ b/app/scss/partials/_colors.scss
@@ -67,3 +67,14 @@ $transparent-red: 			rgba($red, 0.08);
 /* ADD PROJECT COLORS HERE */
 $gold:						#F8E71C;
 $bright-gold: 				#FF9D00;
+
+
+/* UPGRADE PLAN VIEW COLORS */
+$price-blue: 				#00AEF0;
+$price-blue-hover: 			#0078CA;
+$blue-alt:					#4CAEEA;
+$price-purple: 				#611B87;
+$price-purple-alt: 			#720174;
+$price-purple-hover: 		#710d72;
+$price-gold: 				#B8860B;
+$price-gold-hover: 			#906908;
