--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -1,3 +1,5 @@
+$medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow to next line
+
 .ChoosePlanView {
 	padding-bottom: 20px;
 }
