Add new intro hub css to template

--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -18,6 +18,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../dist/css/foundation_hub.css" media="screen" rel="stylesheet" type="text/css">
 <link href="../../dist/css/hub.css" media="screen" rel="stylesheet" type="text/css">
+<link href="../../dist/css/hub_ghostery_browser.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="root"></div>
