--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -40,8 +40,13 @@
   padding: 20px;
   margin: 20px;
   border: solid 1px $tundora;
+  border-radius: 4px;
 
-  .selected {
+  &.selected {
+	border: solid 4px $ghosty-blue;
+  }
+
+  &:hover {
 	border: solid 4px $ghosty-blue;
   }
 }
