--- a/app/scss/hub_ghostery_browser.scss
+++ b/app/scss/hub_ghostery_browser.scss
@@ -70,6 +70,7 @@ html, body, #root {
 @import './partials/radio_button';
 
 // Imports from ../ghostery-browser-hub directory
+@import '../ghostery-browser-hub/Views/OnboardingView/OnboardingView.scss';
 @import '../ghostery-browser-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss';
 @import '../ghostery-browser-hub/Views/OnboardingViews/StepProgressbar/StepProgressbar.scss';
 @import '../ghostery-browser-hub/Views/OnboardingViews/Step1_CreateAccountView/Step1_CreateAccountView.scss';
