--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -3,6 +3,33 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 .ChoosePlanView {
 	padding-bottom: 20px;
 }
+.ChoosePlanView__relativeContainer {
+	position: relative;
+}
+.ChoosePlanView__caret.left {
+	margin: 7px auto 0 auto;
+    height: 10px;
+    width: 10px;
+    border-left: 2px solid $tundora;
+    border-top: 2px solid $tundora;
+	cursor: pointer;
+	transform: rotate(-45deg);
+}
+.ChoosePlanView__backContainer {
+	position: absolute;
+	display: flex;
+	width: 68px;
+	margin-top: 5px;
+	@include breakpoint(small down) {
+		position: relative;
+	}
+	.ChoosePlanView__back {
+		margin-top: 8px;
+		font-size: 16px;
+		color: $tundora;
+		text-decoration: underline;
+	}
+}
 .ChoosePlanView__yourPrivacyPlan {
 	margin: auto;
 	font-size: 24px;
