Add margin top to Step Progress Bar

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -1,6 +1,7 @@
 $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow to next line
 
 .ChoosePlanView {
+	margin: 45px auto 0 auto;
 	padding-bottom: 20px;
 }
 .ChoosePlanView__relativeContainer {
