GH-2218: Browser Onboarding Copy Edits & Tooltips (#652)
* Add tooltips for BlockSettingsView and move <Tooltip /> to shared-hub. Remove some unused translation messages

* Remove unused svgs

* Remove unused scss

* Add messages for step 3 choose your search

* Add back message

--- a/app/shared-components/Tooltip/Tooltip.scss
+++ b/app/shared-components/Tooltip/Tooltip.scss
@@ -108,6 +108,19 @@
 			line-height: 1.5;
 		}
 	}
+	.onboarding .tooltip-content {
+		color: $white;
+		background-color: $black;
+		font-size: 14px;
+		opacity: .96;
+		border-radius: 4px;
+		&:after {
+			border-color: transparent transparent $black $black;
+		}
+		.tooltip-header {
+			font-weight: 500;
+		}
+	}
 	.dark-theme .tooltip-content {
 		background-color: #333333;
 		color: #ffffff;
